--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -227,11 +227,13 @@ nav {
 }
 
 #navigation-2 a {
-    background-color: black;
+    z-index: 2;
     background: linear-gradient(to right, black 50%, #f8f8f7 50%) left;
     background-size: 200%;
     transition: .5s cubic-bezier(1, 0, 0.2, 1);
 }
+
+
 
 #nav-hover-home {
     font-family: 'Comforter', cursive;
@@ -260,12 +262,41 @@ nav {
 }
 
 /* hero section */
+.hero a {
+    position: absolute;
+    padding: 20px 40px 17px 15px;
+    left: 80%;
+    bottom: 10%;
+    z-index: 10 !important;
+    text-decoration: none;
+    color: #f8f8f7;
+    background: url(../images/index/pb1.png) no-repeat;
+    background-position: 100% 40%;
+    background-size: 400px;
+    /* border: 4px solid #000000; */
+    border-radius: 10px;
+}
+
+.hero a:hover {
+    letter-spacing: 2px;
+    padding: 20px 15px 17px 40px!important;
+    background: url(../images/index/pb2.png) no-repeat !important;
+    background-position:  0% 50% !important;
+    transition-duration: 1s;
+    animation-duration: 1s;
+    background-size: 400px;
+}
+
+
+/* about image animation */
+
+  
 #hero-project {
     border-top: 10px solid #000000;
     /* 16:9 aspect ratio */
     padding-top: 56.25%;
     position: relative;
-    z-index: -1;
+    z-index: 0;
 }
 
 #hero-project video {
@@ -275,7 +306,7 @@ nav {
     position: absolute;
     top: 0;
     width: 100%;
-    z-index: 0;
+    z-index: 1;
 }
 
 /* about section */
@@ -524,15 +555,29 @@ label {
 }
 
 /* Media queries */
+@media screen and (max-width: 1330px) {
+    .hero a {
+        left: 70%;
+        bottom: 20%;
+    }
+}
 @media screen and (max-width: 1260px) {
     .bg {
         background-position: center;
+    }
+    .hero a {
+        left: 66%;
+        bottom: 20%;
     }
 }
 
 @media screen and (max-width: 950px) {
     .bg {
         background-position: 70% 50%;
+    }
+    .hero a {
+        left: 60%;
+        bottom: 20%;
     }
 }
 
@@ -549,8 +594,57 @@ label {
     }
 }
 
-@media screen and (min-width: 1700px) {
+@media screen and (max-width: 675px) {
+    .hero a {
+        left: 20%;
+        bottom: 10%;
+    }
+}
 
+@media screen and (max-width: 340px) {
+    .hero a {
+        left: 10%;
+        bottom: 10%;
+    }
+}
+
+@media screen and (max-width: 280px) {
+    .hero a {
+        left: 0%;
+        bottom: 0%;
+    }
+}
+@media screen and (min-width: 1670px) {
+    .ip-top-hero {
+        bottom: 95%;
+    }
+    
+    .ip-bottom-hero {
+        top: 95%;
+    }
+    
+    .ip-top-cta {
+        bottom: 85%;
+    }
+    
+    .ip-bottom-cta {
+        top: 85%;
+    }
+    
+    .ip-top-con {
+        bottom: 92.5%;
+    }
+    
+    .ip-bottom-con {
+        top: 95%;
+    }
+}
+
+@media screen and (min-width: 1330px) {
+    .hero a {
+        left: 70%;
+        bottom: 20%;
+    }
 }
 
 @media screen and (min-width: 750px) {
