--- a/assets/css/nav-test.css
+++ b/assets/css/nav-test.css
@@ -10,7 +10,7 @@ nav {
     width: 100%;
     Height: 200%;
     position: absolute;
-    background-color: black;
+    background-color: white;
     top: 0;
     z-index: 0;
 }
@@ -20,8 +20,8 @@ nav {
     overflow: hidden;
     right: 5%;
     top: 20%;
-    width: 70px;
-    height: 70px;
+    width: 85px;
+    height: 75px;
     padding-left: 15px;
     text-align: center;
     color: #f8f8f7;
@@ -29,14 +29,16 @@ nav {
     line-height: 75px;
     background: url(../images/index/pb1.png) no-repeat;
     background-size: 350px;
-    background-position: 3% 78%;
+    background-position: 3% 85%;
     border-radius: 20px;
     z-index: 1;
 }
 
 .nav-burger:hover {
-    width: 70px;
-    padding-left: 0px;
+    width: 80px;
+    padding-left: 15px;
+    padding-right: 7px;
+    padding-top: 1.5px;
     background: url(../images/index/pb2.png) no-repeat;
     background-size: 500px;
     background-position: 7.5% 60%;
@@ -44,10 +46,6 @@ nav {
     color: #000000;
     letter-spacing: 4px;
     transition-duration: 1s;
-    animation-name: button-hover-fill;
-    animation-delay: 0.5s;
-    animation-duration: 0.5s;
-    animation-fill-mode: forwards;
 }
 
 .nav-burger:focus {
@@ -94,5 +92,16 @@ nav {
     letter-spacing: 8px;
     color: #db0a0b;
     transition-duration: 1.5s;
+    
+}
+
+.nav-content a {
+    text-decoration: none;
+    color:#000000;
+}
+
+#nav-active {
+    border-right: 4px solid #db0a0b;
+    color: #db0a0b;
 }
 
