--- a/assets/css/nav-test.css
+++ b/assets/css/nav-test.css
@@ -11,6 +11,7 @@ nav {
     Height: 200%;
     position: absolute;
     background-color: white;
+    font-family: sans-serif;
     top: 0;
     z-index: 0;
 }
