--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -25,16 +25,6 @@ body {
 
 /* page layout */
 
-nav {
-    padding: 15px 0;
-    width: 100%;
-    height: 100px;
-    background-color: #000000;
-    display: grid;
-    grid-template-areas:
-        'nleft logo nright';
-}
-
 .bg {
     background: url(../images/index/index-bg-b.png) no-repeat;
     background-position: right;
@@ -156,6 +146,14 @@ nav {
     top: 92.5%;
 }
 /* header and logo  */
+#logo-positioner {
+    position: absolute;
+    top: 40%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
 
 #logo-container {
     margin: 0 auto;
@@ -188,71 +186,115 @@ nav {
 }
 
 /* navigation */
-.nleft a {
-    text-decoration: none;
-    padding: 10px;
+
+nav {
+    width: 75px;
+    Height: 75px;
+    position: absolute;
+    background-color: none;
+    font-family: sans-serif;
+    top: 0;
+    z-index: 1;
+}
+
+.nav-burger {
+    position: fixed;
+    overflow: hidden;
+    right: 2.5%;
+    top: 4%;
+    width: 85px;
+    height: 75px;
+    padding-left: 15px;
+    text-align: center;
     color: #f8f8f7;
-    text-shadow: none;
-    text-transform: uppercase;
-    font-family: 'Marcellus', serif;
-    font-weight: 700;
-    font-size: 2rem;
-    letter-spacing: 8px;
-    position: relative;
-    z-index: 3;
-    background-color: black;
+    font-size: 50px;
+    line-height: 75px;
+    background: url(../images/index/pb1.png) no-repeat;
+    background-size: 350px;
+    background-position: 3% 85%;
+    border-radius: 20px;
+    z-index: 1;
 }
 
-.nright a {
+.nav-burger:hover {
+    width: 80px;
+    padding-left: 15px;
+    padding-right: 7px;
+    padding-top: 1.5px;
+    background: url(../images/index/pb2.png) no-repeat;
+    background-size: 500px;
+    background-position: 7.5% 60%;
+    border-radius: 20px;
+    color: #000000;
+    letter-spacing: 4px;
+    transition-duration: 1s;
+}
+
+.nav-burger:focus {
+    width: 280px;
+    height: 400px;
+    text-align: right;
+    vertical-align: top;
+    padding: 10px 40px 10px 0px; 
+    color: #000000;
+    background: url(../images/index/pb3.png) no-repeat;
+    background-size: cover;
+    border-radius: 0px;
+    background-position: 30% 45%;
+    transition-duration: 1s;
+}
+
+.nav-content {
+    display: none;
+    position: absolute;
+    top: 0px;
+    Right: 0px;
+    width: 0px;
+    height: 0px;
+    padding-right: 10px;
+    letter-spacing: 4px !important;
     text-decoration: none;
-    padding: 10px;
-    color: #f8f8f7;
-    text-shadow: none;
-    text-transform: uppercase;
-    font-family: 'Marcellus', serif;
-    font-weight: 700;
-    font-size: 2rem;
-    letter-spacing: 8px;
-    position: relative;
-    z-index: 3;
-    background-color: black;
-}
-
-#navigation-1 a {
-    background-color: black;
-    background: linear-gradient(to left, black 50%, #f8f8f7 50%) right;
-    background-size: 200%;
-    transition: .5s cubic-bezier(1, 0, 0.2, 1);
-}
-
-#navigation-2 a {
+    background-color: #00000000 !important;
+    color: #00000000 !important;
+    font-size: 18px;
     z-index: 2;
-    background: linear-gradient(to right, black 50%, #f8f8f7 50%) left;
-    background-size: 200%;
-    transition: .5s cubic-bezier(1, 0, 0.2, 1);
+    transition-duration: 1s;
 }
 
-.nleft a:hover {
+.nav-burger:focus .nav-content {
+    display: block;
+    width: 270px;
+    height: 375px;
+    color: #000000 !important;
+    background-color: #f8f8f7 !important;
+    transition-duration: 1s;
+}
+
+.nav-content li:hover {
+    letter-spacing: 8px;
+    color: #db0a0b;
+    transition-duration: 1.5s;
+    
+}
+
+.nav-content a {
+    text-decoration: none;
+    color:#000000;
+}
+
+#nav-active {
+    border-right: 4px solid #db0a0b;
     color: #db0a0b;
 }
 
-.nright a:hover {
-    color: #db0a0b;
-}
 
-#navigation-1 a:hover {
-    background-position: left;
-}
 
-#navigation-2 a:hover {
-    background-position: right;
-}
 
 /* hero section */
 .hero a {
     position: absolute;
     padding: 20px 40px 17px 15px;
-    left: 80%;
+    left: 10%;
     bottom: 10%;
     z-index: 10 !important;
     text-decoration: none;
@@ -275,12 +317,7 @@ nav {
     opacity: 1;
 }
 
-
-/* about image animation */
-
-  
 #hero-project {
-    border-top: 10px solid #000000;
     /* 16:9 aspect ratio */
     padding-top: 56.25%;
     position: relative;
@@ -289,7 +326,6 @@ nav {
 
 #hero-project video {
     border: 0;
-    height: 100%;
     left: 0;
     position: absolute;
     top: 0;
@@ -545,7 +581,7 @@ label {
 /* Media queries */
 @media screen and (max-width: 1330px) {
     .hero a {
-        left: 70%;
+        left: 10%;
         bottom: 20%;
     }
 }
@@ -554,7 +590,7 @@ label {
         background-position: center;
     }
     .hero a {
-        left: 66%;
+        left: 15%;
         bottom: 20%;
     }
 }
@@ -564,27 +600,18 @@ label {
         background-position: 70% 50%;
     }
     .hero a {
-        left: 60%;
+        left: 20%;
         bottom: 20%;
     }
 }
 
 @media screen and (max-width: 750px) {
-    nav {
-        display: grid;
-        grid-template-areas:
-            'logo'
-            'nleft'
-            'nright';
-        padding-bottom: 275px;
-        background-color: #000000;
-            margin: 0 0 0 0;
-    }
+   
 }
 
 @media screen and (max-width: 675px) {
     .hero a {
-        left: 20%;
+        left: 10%;
         bottom: 10%;
     }
 }
@@ -630,7 +657,7 @@ label {
 
 @media screen and (min-width: 1330px) {
     .hero a {
-        left: 70%;
+        left: 10%;
         bottom: 20%;
     }
 }
@@ -641,9 +668,7 @@ label {
     margin: 0 auto;
     padding-right: 20%;
 }
-nav {
-    padding-top: 40px;
-}
+
 #form-box {
     padding: 5% 0;
 }
