--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -119,7 +119,7 @@ body {
     background: url(../images/index/ink-partition-4.png) no-repeat center;
     background-size: cover;
     position: absolute;
-    z-index: 5;
+    z-index: 1 ;
 }
 
 .ip-top-hero {
@@ -175,6 +175,32 @@ body {
     z-index: 2;
 }
 
+@media screen and (min-width: 1000px) {
+    #logo-positioner {
+        top: 30%;
+    }
+    #logo-container {
+        width: 460px;
+        height: 230px;
+    }
+    #logo-ronin {
+        font-size: 148px;
+        letter-spacing: 2 !important;
+    }
+    #logo-347 {
+        font-family: 'Mr Dafoe', cursive;
+        position: absolute;
+        right: 50px !important;
+        top: 100px !important;
+        font-size: 100px !important;
+        color: #db0a0b;
+        z-index: 3;
+    }
+    .hero a {
+        left: 5% !important;
+    }
+}
+
 #logo-347 {
     font-family: 'Mr Dafoe', cursive;
     position: absolute;
@@ -194,7 +220,7 @@ nav {
     background-color: none;
     font-family: sans-serif;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 .nav-burger {
@@ -213,7 +239,7 @@ nav {
     background-size: 350px;
     background-position: 3% 85%;
     border-radius: 20px;
-    z-index: 1;
+    z-index: 10;
 }
 
 .nav-burger:hover {
@@ -287,9 +313,6 @@ nav {
     color: #db0a0b;
 }
 
-
-
-
 /* hero section */
 .hero a {
     position: absolute;
@@ -321,6 +344,7 @@ nav {
     /* 16:9 aspect ratio */
     padding-top: 56.25%;
     position: relative;
+    top: 0%;
     z-index: 0;
 }
 
@@ -328,7 +352,7 @@ nav {
     border: 0;
     left: 0;
     position: absolute;
-    top: 0;
+    top: -20%;
     width: 100%;
     z-index: 1;
 }
@@ -629,7 +653,7 @@ label {
         bottom: 0%;
     }
 }
-@media screen and (min-width: 1670px) {
+@media screen and (min-width: 1200px) {
     .ip-top-hero {
         bottom: 95%;
     }
