--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -77,7 +77,7 @@ body {
     grid-area: call-to-action;
     overflow: hidden;
     position: relative;
-    top: -10%;
+    top: -15%;
 }
 
 .contact {
@@ -94,6 +94,7 @@ body {
 
 .footer {
     grid-area: footer;
+    position: relative;
 }
 
 .ink-partition {
@@ -105,29 +106,31 @@ body {
     z-index: 1 ;
 }
 
-.ip-top-hero {
+/* .ip-top-hero {
     bottom: 85%;
-}
+} */
 
 .ip-bottom-hero {
-    top: 85%;
+    top: 89%;
 }
 
 .ip-top-cta {
-    bottom: 92.5%;
+    bottom: 90%;
 }
 
 .ip-bottom-cta {
-    top: 92.5%;
+    top: -30%;
 }
 
-.ip-top-con {
+/* .ip-top-con {
     bottom: 92.5%;
 }
 
 .ip-bottom-con {
     top: 92.5%;
-}
+} */
+
+
 /* header and logo  */
 #logo-positioner {
     position: absolute;
@@ -147,15 +150,29 @@ body {
     text-align: center;
     text-transform: uppercase;
     position: relative;
-    overflow: hidden;
 }
 
 #logo-ronin {
+    opacity: 0;
+    padding-left: 200px;
     font-family: 'Teko', sans-serif;
     font-size: 74px;
     position: relative;
     letter-spacing: 2px;
     z-index: 2;
+    animation-name: ronin-page-open;
+    animation-duration: 1s;
+    animation-delay: 2s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+}
+@keyframes ronin-page-open {
+    from { opacity: 0;
+        padding-left: 200px;
+       }
+        to { opacity: 1;
+            padding-left: 0px;
+        }
 }
 
 @media screen and (min-width: 1000px) {
@@ -179,19 +196,31 @@ body {
         color: #db0a0b;
         z-index: 3;
     }
-    .hero a {
-        left: 5% !important;
-    }
 }
 
 #logo-347 {
     font-family: 'Mr Dafoe', cursive;
+    opacity: 0;
     position: absolute;
     right: 23px;
     top: 58px;
+    padding-right: 280px;
     font-size: 50px;
     color: #db0a0b;
     z-index: 3;
+    animation-name: number-page-open;
+    animation-duration: 1s;
+    animation-delay: 2.2s;
+    animation-timing-function: cubic-bezier(1,0,0.2,1);;
+    animation-fill-mode: forwards;
+}
+@keyframes number-page-open {
+    from { opacity: 0;
+        padding-right: 280px;
+       }
+        to { opacity: 1;
+            padding-right: 0px;
+        }
 }
 
 /* navigation */
@@ -314,8 +343,8 @@ right: 2.5%;
 .hero a {
     position: absolute;
     padding: 20px 40px 17px 15px;
-    left: 10%;
-    bottom: 10%;
+    left: 5%;
+    bottom: 20%;
     z-index: 10 !important;
     text-decoration: none;
     color: #f8f8f7;
@@ -349,11 +378,11 @@ to { opacity: 0.9;
 }
 
 #hero-project {
-    /* 16:9 aspect ratio */
     padding-top: 56.25%;
     position: relative;
     bottom: 0%;
     z-index: 0;
+    overflow: hidden;
 }
 
 #hero-project video {
@@ -364,77 +393,12 @@ to { opacity: 0.9;
     width: 100%;
     z-index: 1;
 }
-
-/* about section */
-
-#about-container {
-    margin-top: 5%;
-    width: 100%;
-    height: 500px;
-    position: relative;
-    z-index: 4;
-    background-color: #000000;
-}
-
-#about-image-container {
-    margin: 0 auto;
-    height: 900px;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-}
-
-#about-image {
-    background: url(../images/index/about-bg-2.png) no-repeat center;
-    width: 100%;
-    height: 1000px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 1;
-    /* animation */
-    animation-name: about-slide;
-    animation-duration: 30s;
-    animation-fill-mode: forwards;
-}
-
-#about-image-shade {
-    position: relative;
-    width: 100%;
-    height: 900px;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 3;
-}
-
-/* about image animation */
-@keyframes about-slide {
-    from {
-        transform: scale(1.1);
-    }
-
-    to {
-        transform: scale(1);
-    }
-}
-
-#about-text-container {
-    width: 50%;
-}
-
-#about-text {
-    position: absolute;
-    top: 100px;
-    width: 90%;
-    Margin: 0 auto;
-    padding: 10px 5% 10px 5%;
-    z-index: 4;
-}
-
 /* body */
 
 #call-to-actions {
-    width: 90%;
-    padding: 15% 0;
+    width: 30%;
+    padding-top: 10%;
+    padding-bottom: 2.5%;
     margin: 0 auto;
     background-size: cover;
 }
@@ -610,98 +574,106 @@ label {
     text-align: right;
 }
 
-/* Media queries */
-@media screen and (max-width: 1330px) {
-    .hero a {
-        left: 10%;
-        bottom: 20%;
+/* media-queries */
+/* for larger screens */
+@media screen and (min-width: 1000px) {
+    #logo-positioner {
+        top: 30%;
     }
-}
-@media screen and (max-width: 1260px) {
-    .bg {
-        background-position: center;
+    #logo-container {
+        width: 460px;
+        height: 230px;
     }
-    .hero a {
-        left: 15%;
-        bottom: 20%;
+    #logo-ronin {
+        font-size: 148px;
+        letter-spacing: 2 !important;
     }
-}
+    #logo-347 {
+        font-family: 'Mr Dafoe', cursive;
+        position: absolute;
+        right: 50px !important;
+        top: 100px !important;
+        font-size: 100px !important;
+        color: #db0a0b;
+        z-index: 3;
+    }
 
-@media screen and (max-width: 950px) {
-    .bg {
-        background-position: 70% 50%;
+    nav {
+        width: 75px;
+        Height: 75px;
+        position: absolute;
+        background-color: none;
+        font-family: sans-serif;
+        top: 0;
+        z-index: 2;
     }
-    .hero a {
-        left: 20%;
-        bottom: 20%;
-    }
-}
 
-@media screen and (max-width: 750px) {
-   
-}
+    #big-nav {display: inline-block;
+        position: relative;
+        top: -15%;
+    font-size: 50%;
+    font-family: 'teko';
+    letter-spacing: 8px;
+    text-transform: uppercase;
+text-align: center;
+line-height: 60px;}
 
-@media screen and (max-width: 675px) {
-    .hero a {
-        left: 10%;
-        bottom: 10%;
+    .nav-burger {
+        position: fixed;
+        overflow: hidden;
+        opacity: 0;
+        right: 10%;
+        top: 4%;
+        width: 200px;
+        height: 60px;
+        padding-left: 5px;
+        padding-right: 15px;
+        text-align: right;
+        color: #f8f8f7;
+        font-size: 50px;
+        line-height: 60px;
+        background: url(../images/index/pb1flip.png) no-repeat;
+        background-size: 440px;
+        background-position: -3% 55%;
+        border-radius: 20px;
+        z-index: 10;
+        animation-name: nav-page-open;
+        animation-duration: 1s;
+        animation-delay: 1s;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards;
     }
-}
-
-@media screen and (max-width: 340px) {
-    .hero a {
-        left: 10%;
-        bottom: 10%;
+    @keyframes nav-page-open {
+        from { opacity: 0;
+        right: 10%;
     }
-}
-
-@media screen and (max-width: 280px) {
-    .hero a {
-        left: 0%;
-        bottom: 0%;
+    to { opacity: 1;
+    right: 2.5%;
     }
-}
-@media screen and (min-width: 1200px) {
-    .ip-top-hero {
-        bottom: 95%;
     }
     
-    .ip-bottom-hero {
-        top: 95%;
-    }
-    
-    .ip-top-cta {
-        bottom: 85%;
-    }
-    
-    .ip-bottom-cta {
-        top: 85%;
-    }
-    
-    .ip-top-con {
-        bottom: 92.5%;
-    }
-    
-    .ip-bottom-con {
-        top: 95%;
+    .nav-burger:hover {
+        width: 200px;
+        padding-left: 15px;
+        padding-right: 50px;
+        padding-top: 1.5px;
+        background: url(../images/index/pb2.png) no-repeat;
+        background-size: 450px;
+        background-position: 100% 30%;
+        border-radius: 20px;
+        color: #000000;
+        letter-spacing: 4px;
+        transition-duration: 1s;
     }
 }
 
-@media screen and (min-width: 1330px) {
-    .hero a {
-        left: 10%;
-        bottom: 20%;
-    }
+@media screen and (min-width: 1750px) {
+    .call-to-action {top: -20%;}
+    #call-to-actions {padding-top: 15%;
+        padding-bottom: 7.5%;}
 }
 
-@media screen and (min-width: 750px) {
-#call-to-actions {
-    width: 50%;
-    margin: 0 auto;
-    padding-right: 20%;
-}
-
-#form-box {
-    padding: 5% 0;
-}
+/* for smaller screens */
+@media screen and (max-width: 999px) {
+    #big-nav {display: none;}
 }
