--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -54,93 +54,6 @@ body {
     z-index: -1;
 }
 
-
-/* page layout */
-.index-layout {
-    display: grid;
-    row-gap: 0px;
-    grid-template-areas:
-        'hero'
-        'call-to-action'
-        'contact'
-        'footer';
-    overflow: hidden;
-}
-
-.hero {
-    grid-area: hero;
-    overflow: hidden;
-    top: -10%;
-    opacity: 0;
-    animation-name: hero-opening;
-    animation-delay: 1s;
-    animation-duration: 1s;
-    animation-timing-function: ease-in;
-    animation-fill-mode: forwards;
-}
-
-.call-to-action {
-    grid-area: call-to-action;
-    overflow: hidden;
-    position: relative;
-    top: -50%;
-    animation-name: cta-opening;
-    animation-delay: 1s;
-    animation-duration: 1s;
-    animation-timing-function: ease-in;
-    animation-fill-mode: forwards;
-}
-
-.footer-creds {
-    display: grid;
-    grid-template-areas:
-        'creds-1 creds-2';
-}
-
-.footer {
-    grid-area: footer;
-    position: relative;
-}
-
-.ink-partition {
-    width: 100%;
-    height: 200px;
-    background: url(../images/index/ink-partition-4.png) no-repeat center;
-    background-size: cover;
-    position: absolute;
-    z-index: 1;
-    opacity: 0;
-    animation-name: ink-opening;
-    animation-delay: 1s;
-    animation-duration: 1s;
-    animation-timing-function: ease-in;
-    animation-fill-mode: forwards;
-}
-
-.ip-bottom-hero {
-    top: 89%;
-}
-
-.ip-top-cta {
-    bottom: 90%;
-    animation-delay: 1.7s;
-}
-
-.ip-bottom-cta {
-    top: -30%;
-    animation-delay: 0s;
-}
-
-/* .ip-top-con {
-    bottom: 92.5%;
-}
-
-.ip-bottom-con {
-    top: 92.5%;
-} */
-
-
-/* header and logo  */
 #logo-positioner {
     position: absolute;
     top: 40%;
@@ -175,67 +88,34 @@ body {
     height: 70%;
 }
 
-/* #logo-ronin {
-    opacity: 0;
-    padding-left: 200px;
-    font-family: 'Teko', sans-serif;
-    font-size: 74px;
-    position: relative;
-    letter-spacing: 2px;
-    z-index: 2;
-    animation-name: ronin-page-open;
-    animation-duration: 1s;
-    animation-delay: 2s;
-    animation-timing-function: ease-in-out;
-    animation-fill-mode: forwards;
-    transition-duration: 1s;
-}
-
-@keyframes ronin-page-open {
-    from {
-        opacity: 0;
-        padding-left: 200px;
-    }
-
-    to {
-        opacity: 1;
-        padding-left: 0px;
-    }
-}
-
-#logo-347 {
-    font-family: 'Mr Dafoe', cursive;
-    opacity: 0;
+.ink-partition {
+    width: 100%;
+    height: 200px;
+    background: url(../images/index/ink-partition-4.png) no-repeat center;
+    background-size: cover;
     position: absolute;
-    right: 23px;
-    top: 58px;
-    padding-right: 280px;
-    font-size: 50px;
-    color: #db0a0b;
-    z-index: 3;
-    animation-name: number-page-open;
+    z-index: 1;
+    opacity: 0;
+    animation-name: ink-opening;
+    animation-delay: 1s;
     animation-duration: 1s;
-    animation-delay: 2.2s;
-    animation-timing-function: cubic-bezier(1, 0, 0.2, 1);
-    ;
+    animation-timing-function: ease-in;
     animation-fill-mode: forwards;
-    transition-duration: 1s;
 }
 
-@keyframes number-page-open {
-    from {
-        opacity: 0;
-        padding-right: 280px;
-    }
-
-    to {
-        opacity: 1;
-        padding-right: 0px;
-    }
-} */
+/* page layout */
+.index-layout {
+    display: grid;
+    row-gap: 0px;
+    grid-template-areas:
+        'hero'
+        'call-to-action'
+        'contact'
+        'footer';
+    overflow: hidden;
+}
 
 /* navigation */
-
 nav {
     position: fixed;
     z-index: 2;
@@ -251,13 +131,6 @@ nav {
     animation-delay: 1s;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
-}
-
-.nav-potiioner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-
 }
 
 .nav-menu {
@@ -310,7 +183,6 @@ nav {
     line-height: 65px;
     font-size: 18px;
     letter-spacing: 4px;
-    /* animation */
     animation-name: nav-focus;
     animation-delay: 0s;
     animation-duration: 1s;
@@ -343,7 +215,19 @@ nav {
     transition-duration: 1.5s;
 }
 
-/* hero section */
+/* header and hero section */
+.hero {
+    grid-area: hero;
+    overflow: hidden;
+    top: -10%;
+    opacity: 0;
+    animation-name: hero-opening;
+    animation-delay: 1s;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
+}
+
 .hero a {
     position: absolute;
     padding: 20px 40px 17px 15px;
@@ -393,7 +277,15 @@ nav {
     z-index: 1;
 }
 
-/* body */
+.ip-bottom-hero {
+    top: 89%;
+}
+
+/* call to action section */
+.ip-top-cta {
+    bottom: 90%;
+    animation-delay: 1.7s;
+}
 
 #call-to-actions {
     width: 30%;
@@ -403,13 +295,25 @@ nav {
     background-size: cover;
 }
 
-#call-to-actions>h2 {
+#call-to-actions > h2 {
     text-align: center;
     margin-bottom: 0.5em;
 }
 
 #call-to-actions p {
     margin: 20px auto;
+}
+
+.call-to-action {
+    grid-area: call-to-action;
+    overflow: hidden;
+    position: relative;
+    top: -50%;
+    animation-name: cta-opening;
+    animation-delay: 1s;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
 }
 
 .contact-head {
@@ -422,86 +326,11 @@ nav {
     margin: 0 auto;
 }
 
-/* contact form */
-
-#contact-container {
-    width: 100%;
-    height: 650px;
-    margin: 0 auto;
-    position: relative;
-}
-
-#contact-bg {
-    background: url(../images/index/contact-bg.png) no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 700px;
-}
-
-#form-box {
-    padding: 10% 0;
-    position: relative;
-    width: 100%;
-    height: 700px;
-    background-color: rgba(0, 0, 0, 0.6);
-}
-
-.contact-form {
-    margin-top: 20px;
-    color: #f8f8f7;
-    position: absolute;
-    width: 95vw;
-    padding: 0 3%;
-}
-
-.contact-form>h2 {
-    color: #f8f8f7;
-    padding-bottom: 0.5em;
-}
-
-label {
-    width: 100%;
-}
-
-.form-text {
-    background: transparent;
-    color: #f8f8f7;
-    width: 100%;
-    height: 25px;
-    margin: 5px 0 20px 0;
-    border: 1px solid #f8f8f7;
-    border-radius: 2px;
-}
-
-.form-text:focus {
-    outline: 2px solid #db0a0b !important;
-    border: 1px solid rgba(0, 0, 0, 0) !important;
-    padding-left: 0.2em;
-}
-
-.form-note {
-    min-width: 250px;
-    min-height: 150px;
-}
-
-.submit-contact {
-    float: right;
-    font-family: 'Michroma', sans-serif;
-    color: #f8f8f7;
-    background-color: rgba(0, 0, 0, 0);
-    border: 1px solid #f8f8f7;
-    padding: 5px;
-    border-radius: 2px;
-    position: relative;
-    z-index: 3;
-}
-
-.submit-contact:hover {
-    background-color: #f8f8f7;
-    color: #070505;
-}
-
 /* footer */
+.footer {
+    grid-area: footer;
+    position: relative;
+}
 
 #social-footer {
     width: 100%;
@@ -511,9 +340,9 @@ label {
     position: relative;
 }
 
-#ink-partition-footer {
-    top: -100px;
-    z-index: 3;
+.ip-bottom-cta {
+    top: -30%;
+    animation-delay: 0s;
 }
 
 #social {
@@ -573,18 +402,19 @@ label {
     color: #C0007A;
 }
 
-#company-address {
-    float: right;
-    margin: 20px 40px;
-    text-align: right;
-    font-size: 1.25em;
+.footer-creds {
+    display: grid;
+    grid-template-areas:
+        'creds-1 creds-2';
 }
 
 #cal-rex-git {
+    grid-area: creds-1;
     text-align: left;
 }
 
 #copyright {
+    grid-area: creds-2;
     text-align: right;
 }
 
@@ -593,35 +423,16 @@ label {
 @media screen and (min-width: 1000px) {
     #logo-positioner {
         top: 30%;
-        transition-duration: 1s;
     }
 
     #logo-container {
         width: 460px;
         height: 230px;
-        transition-duration: 1s;
-    }
-
-    #logo-ronin {
-        font-size: 148px;
-        letter-spacing: 2 !important;
-        transition-duration: 1s;
-    }
-
-    #logo-347 {
-        font-family: 'Mr Dafoe', cursive;
-        position: absolute;
-        right: 50px !important;
-        top: 100px !important;
-        font-size: 100px !important;
-        color: #db0a0b;
-        z-index: 3;
-        transition-duration: 1s;
     }
 
     .nav-menu {
-        left: 50px;
-        width: 170px;
+        left: 35px;
+        width: 185px;
     }
 
     .active,
@@ -639,15 +450,10 @@ label {
         position: relative;
         top: -15%;
         font-size: 50%;
-        font-family: 'teko', sans-serif;
         letter-spacing: 8px;
         text-transform: uppercase;
         text-align: center;
         line-height: 60px;
-    }
-
-    #big-nav:focus {
-        font-family: 'Times New Roman', Times, serif;
     }
 
     .active,
